Fix panel width and map widget alignments bug

--- a/app/assets/stylesheets/table/header/header_content.css.scss
+++ b/app/assets/stylesheets/table/header/header_content.css.scss
@@ -152,7 +152,7 @@
       @include display-flex();
       @include justify-content(flex-start, start);
       @include align-items(center, center);
-      height:28px;
+      height:45px;
       margin:0;
 
       li { margin:0; }
